# xengine_project

./: Cargo.toml  LICENSE  README.md  monkey_2.8.mtl  test.dyon  ui_style.json
luminance-sdl2/: Cargo.toml
luminance-sdl2/src/: lib.rs
photic/: Cargo.toml
photic/src/: lib.rs  x3d.rs
xe_core/: Cargo.toml
xe_core/src/: editor.rs  lib.rs  main.rs  traits.rs  ui.rs
xe_editor/: Cargo.toml
xe_editor/src/: lib.rs  old_main.rs
xe_engine_trait/: Cargo.toml
xe_engine_trait/src/: lib.rs
xe_vfs/: Cargo.toml
xe_vfs/src/: lib.rs  resource_storage.rs
xe_vfs/src/mesh_imports/: gl_tf.rs  mod.rs  obj.rs
