[package]
name = "xe_editor"
version = "0.1.0"
authors = ["Luuk van Oijen <lazyluuk.channel@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
libloading = "0.6.2"
log = "0.4"
pretty_env_logger = "0.3.1"
sdl2 = "0.33"
imgui = "0.4.0"

#Engine
xe_core = { path = "../xe_core" }
